# RAG_chatbot

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  Dockerfile  Dockerfile-rag  README.md  __init__.py  app.py  chat.py  collectingTheData.ipynb  create_model.py  dockerfile  document_trainer.py  initialize_model.py  install_dependencies.py  integration_example.py  main.py  mock_api.py  pyproject.toml  pytest.ini  relevance.py  requirements.txt  requirements_simple.txt  run_fasttext_training.py  run_fiscozen.py  run_prod.py  run_rag_test.sh  setup.py  start_api_server.sh  test_all_components.py  test_api_client.py  test_components.py  test_fasttext.py  test_improved_relevance.py  test_individual_component.sh  test_plan.md  test_rag_direct.py  test_rag_local.py  test_utils.py  (+4 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
DOCUMENTATION/: multilingual.md
bert/: __init__.py  bert_classifier.py  initialize_model.py  relevance.py  train_classifier.py
data_documents/: worker_conversations_labeled_translated_file.xlsx
fast_text/: README.md  __init__.py  initialize_model.py  relevance.py  test_relevance.py  train_classifier.py  train_fasttext_model.py  train_improved_model.py  train_improved_model_pinecone.py  train_model.py  train_with_pinecone.py  train_with_real_data.py  trainer.py
fasttext/: README.md  __init__.py  initialize_model.py  relevance.py  train_classifier.py
ingestion/: __init__.py  config.py  document_hashes.json  file_hashing.py  indexed_chunks.json  main.py  pdf_utils.py  pinecone_ops.py  pipeline.py  test_retrieval.py
(+25 files in other folders)
