[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiscozen-chatbot"
version = "0.1.0"
description = "Fiscozen Tax Chatbot using RAG"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Fiscozen Team"}
] 